--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@
 	overflow:hidden; 
 	overflow-y:scroll;
 	list-style: none;
-	height: 100px;
+	height: 300px;
 	/* width: 115px; */
   }
   
@@ -244,4 +244,10 @@
 	min-width: 100px;
 	max-height: 100px; */
     margin-right: 5px;
+}
+.item-row {
+	cursor: pointer;
+}
+.item-cell {
+	cursor: pointer;
 }
