--- a/css/styles.css
+++ b/css/styles.css
@@ -1,63 +1,8 @@
-@keyframes fadein {
-	from { opacity: 0; }
-	to   { opacity: 1; }
-  }
-  /* Style page content */
-  .main {
-	margin-left: 10px;
-	margin-top: 60px;
-	/* padding: 50px 10px; */
-	animation: fadein 0.75s;
-  }
-  
-  /* The sidebar menu */
-  .topnav {
-  height: 30px; /* Full-height: remove this if you want "auto" height */
-	width: 100%; /* Set the width of the sidebar */
-	position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-	z-index: 1; /* Stay on top */
-	top: 0; /* Stay at the top */
-	left: 160px;
-	background-color: #111; /* Black */
-	overflow-x: hidden; /* Disable horizontal scroll */
-	padding-top: 20px;
-	color: white;
-  }
-  .iconSelect {
-	  font-family: 'Lato', 'Font Awesome 5 Free';
-	  font-weight: 900;
-  }
-  
-  .chartType {
-	position: absolute;
-	top: 75px;
-	left: 25px;
-  }
-  .hide {
-	max-height: 0 !important;
-  }
-  
-  .pointerCursor:hover{
-  cursor: pointer;
-  }
-  
-  .rotate-90{
-  transform: rotate(90deg);
-  }
-  
   .connectorListItem:hover {
 	cursor: pointer;
 	background-color: #aaa;
   }
-  .connectorList {
-	padding-left: 0;
-	overflow:hidden; 
-	overflow-y:scroll;
-	list-style: none;
-	height: 100px;
-	/* width: 115px; */
-  }
-.linkTypeList {
+ .linkTypeList {
 	  border: 1px solid gainsboro;
 	  padding-left: 5px;
 	overflow:hidden; 
@@ -75,183 +20,80 @@
 	cursor: pointer;
   }
   
-	/* DivTable.com */
-	.divTable {
-	  display: table;
-	  white-space: nowrap;
-	  width: 800px
-  }
-  
-  .divTableRow {
-	  display: table-row;
-  }
-  
-  .divTableRow-alternate {
-	  display: table-row;
-	  background-color: #EEE;
-  }
-  
-  .divTableHeading {
-	  background-color: #EEE;
-	  display: table-header-group;
-  }
-  
-  .divTableCell,
-  .divTableHead {
-	  /* border: 1px solid gainsboro; */
-	  display: table-cell;
-	  padding: 0px 10px;
-	  font-weight: normal;
-  }
-  .divTableCell-readonly {
-	background-color: lightgrey;
-  }
-  .divTableCell-right {
-	  text-align: right;
-  }
-  
-  .divRowHead {
-	  /* display: table-cell; */
-	  padding: 0px 10px;
-	  background-color: #EEE;
-  }
-  
-  .divColumnHead {
-	  /* display: table-cell; */
-	  padding: 0px 10px;
-	  font-weight: bold;
-	  /* writing-mode: vertical-rl; */
-	  /* min-width: 50px; */
-	  transform: rotate(90deg);
-  }
-  
-  .divTableHeading {
-	  background-color: #EEE;
-	  display: table-header-group;
-	  font-weight: bold;
-  }
-  
-  .divTableFoot {
-	  background-color: #EEE;
-	  display: table-footer-group;
-	  font-weight: bold;
-  }
-  
-  .divTableBody {
-	  display: table-row-group;
-  }
-  .statusColumn {
-	position: relative;
-	/* border: 1px solid #ccc; */
-	padding: 2px;
-	margin: 2px;
-	/* width: 200px; */
-  }
-  
-  .statusColumn i,
-  .statusColumn b,
-  .statusColumn em,
-  .statusColumn strong {
-	writing-mode: vertical-rl;
-	transform: rotate(180deg);
-	white-space: nowrap;
-	display: inline-block;
-	overflow: visible;
-  }
-  
-  .connection-disabled {
-	background-color: lightgrey;
-  }
-  
-  .connection-enabled {
-	text-align: center;
-  }
-  .connection-enabled:hover {
-	cursor: pointer;
-	background-color: lavender;
-  }
-  
-  .dropdown {
-	position: relative;
-	display: inline-block;
-  }
-  
-  .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: #f1f1f1;
-	min-width: 160px;
-	overflow: auto;
-	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	z-index: 1;
-	text-align: left;
-  }
-  
-  .dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-  }
-  
-  .dropdown a:hover {background-color: #ddd;}
-  
-  .show {display: block;}
-  
   .connector {
 	text-align: center;
   }
-  .tallList {
-	height: 200px !important;
-  }
-  
-  /* .modal {
-	padding: 0 !important;
-  }
-  .modal .modal-dialog {
-	width: 100%;
-	max-width: none;
-	height: 100%;
-	margin: 0;
-  }
-  .modal .modal-content {
-	height: 100%;
-	border: 0;
-	border-radius: 0;
-  }
-  .modal .modal-body {
-	overflow-y: auto;
-  } */
-  /* .linkedItems {
-	  border: gainsboro 1px solid;
-	  min-height: 100px;
-	  vertical-align: text-top;
-	  margin-bottom: 10px;
-  }
-  .itemCell {
-	  min-width: 150px;
-	  max-width: 150px;
-	  min-width: 150px;
-	  vertical-align: top;
-	  padding: 5px;
-	  border: gainsboro 1px solid;
-  } */
-  .card-body {
-	  height: 200px;
-	  width: 150px;
-	  align-content: center;
-    /* min-height: 100px;
-	min-width: 100px;
-	max-height: 100px; */
-    margin-right: 5px;
-}
 .item-row {
 	cursor: pointer;
 }
-.item-cell {
+
+.item-row svg {
+	height: 30px;
+	width: 30px;
+}
+
+.item-type-row svg {
+	height: 30px;
+	width: 30px;
 	cursor: pointer;
 }
+
+.link-type-row {
+	cursor: pointer;
+}
+.link-type-row svg {
+	height: 10px;
+	width: 100px;
+}
+
 .key-title {
 	font-size: x-large;
 	font-weight: bold;
 }
+.link {
+	stroke: rgb(231, 209, 209);
+	stroke-width: 2px;
+  }
+.item-context-menu {
+	stroke: transparent;
+	opacity: 0.3;
+}
+.item-context-menu-hover {
+	fill: white;
+	cursor: pointer;
+	opacity: 0.7;
+	stroke: black;
+}
+
+
+.fade-in {
+	animation: fadeIn ease 0.25s;
+	-webkit-animation: fadeIn ease 0.25s;
+	-moz-animation: fadeIn ease 0.25s;
+	-o-animation: fadeIn ease 0.25s;
+	-ms-animation: fadeIn ease 0.25s;
+	}
+	@keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-moz-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-webkit-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-o-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
+	
+	@-ms-keyframes fadeIn {
+	0% {opacity:0;}
+	100% {opacity:1;}
+	}
